# modrinth-bot

./: .env.example  Dockerfile  README.md  config.py  db.py  main.py  pyproject.toml
.github/workflows/: docker.yaml  ruff.yaml
src/: config.py  main.py
