[project]
name = "modrinthbot"
version = "1.0.0"
description = "An official utility discord bot for Modrinth"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "discord-py>=2.5.2",
    "psycopg[binary]>=3.2.6",
    "python-dotenv>=1.1.0",
]

[dependency-groups]
dev = [
    "ruff>=0.11.5",
]

[tool.ruff]
indent-width = 2
